Forge Beta: 11-##-2013 ver 1.5.6


13### cards in total.


-------------
Release Notes
-------------

- If hide tabs setting on, still show tabs for panes with multiple tabs -

- Select abilities using context menu -
Instead of displaying a dialog to select abilities, you'll now get a context menu when left or right clicking cards with multiple ability choices.
Each ability will have a keyboard shortcut of 1-9 based on order.
Unplayable activated abilities will still appear disabled so shortcuts are constant regardless of game state.


- Mana symbols shown in Card Detail and ability menu -
The Card Detail pane now shows mana symbols in place of WUBRG and other appropriate text characters.
Same for ability context menu described above and Game Prompt pane.
Also fixed WUBRG of colored mana symbols on a few dozen cards.
Reminder text now appears in italics, with a preference that can be set to hide it.


- Quest mode bazaar -
Added a new Quest Item, Charm of Vigor. Let's you play best of 5 games rather than best of 3.


- Commander 2013 cards -
Forge now includes many of the new Commander 2013 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.


---------
New Cards
---------

Liar's Pendulum


------------
Known Issues
------------

Several people have noticed that the cards displayed on the battlefield will fail to be displayed when the number of cards on the battlefield increases. Maximizing the human panel can help to re-display the cards.
